--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,16 @@ readme = "README.md"
 license = "MIT"
 edition = "2018"
 
+[features]
+default = ["tokio"]
+
 [dependencies]
-tokio = { version = "1", features= [] }
+tokio = { version = "1", features= [], optional = true }
 log = "0.4"
+futures = { version = "0.3", optional = true }
 
 [dev-dependencies]
 tokio = { version = "1", features = ["full"] }
+
+[package.metadata.docs.rs]
+features = ["futures", "tokio"]
