--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,18 @@ readme = "README.md"
 license = "MIT"
 edition = "2018"
 
+[features]
+default = ["tokio"]
+
 [dependencies]
-tokio = { version = "0.2", features= [] }
+tokio = { version = "0.2", features= [], optional = true }
 log = "0.4"
+futures = { version = "0.3", optional = true }
 
 [dev-dependencies]
 tokio = { version = "0.2", features = ["full"] }
+
+[package.metadata.docs.rs]
+features = ["futures"]
+
+
