Adjust clippy and test action

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,9 +12,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+
       - name: Check formatting
         run: cargo fmt -- --check
+
       - name: Run clippy
-        run: cargo clippy --verbose --features="all" --all-targets -- -D clippy::all
+        run: cargo clippy --verbose
+
       - name: Run tests
-        run: cargo test --verbose --features="all" --all-targets
+        run: cargo test --verbose
