--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,4 +20,4 @@ jobs:
         run: cargo clippy --verbose
 
       - name: Run tests
-        run: cargo test --verbose
+        run: cargo test --verbose --all-features
